# vamame

./: .gitignore  README.md
.github/workflows/: release.yml
docs/: csdn-promotion.md
oscilloscope/: Cargo.toml  README.md
oscilloscope/docs/superpowers/specs/: 2026-06-13-gorilla-tsz-cache-design.md
oscilloscope/src/: app.rs  cursor.rs  data.rs  density_renderer.rs  export.rs  fft_analysis.rs  lib.rs  main.rs  math_channel.rs  measurement.rs
oscilloscope/src/app/: central.rs  cursor_lines.rs  export_actions.rs  eye_diagram.rs  fft_window.rs  interaction.rs  math_dialog.rs  measurement_panel.rs  mod.rs  toolbar.rs  xy_window.rs
oscilloscope/src/data/: cache.rs  chunk_store.rs  indexed.rs  tsz_codec.rs
