[package]
name = "oscilloscope"
version = "0.2.0"
default-run = "oscilloscope"
edition = "2021"
description = "Oscilloscope waveform viewer — Gorilla codec, zoom-aware downsample"

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui_plot = "0.34"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
rustfft = "6"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
bytemuck = { version = "1", features = ["derive"] }
csv = "1"
zstd = "0.13"
fast-float = "0.2"
rayon = "1"
memmap2 = "0.9"
bytecount = "0.6"

[profile.release]
opt-level = 3
